--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="no_results_found">No results found</string>
+    <string name="budapest_tour_guide_app">Budapest Tour Guide App</string>
+    <string name="historical_places">Historical Places</string>
+    <string name="events">Events</string>
+    <string name="sport">Sport</string>
+    <string name="restaurants">Restaurants</string>
 </resources>
